# project_template

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  ruff.toml
.github/workflows/: ci.yml
backend/: Dockerfile  api.py  config.py  database.py  logging_config.py  pyproject.toml  seed.py
backend/core/: dependencies.py  exceptions.py  models.py
backend/core/repositories/: base.py
backend/core/routers/: system.py
backend/modules/: basemodels.py  registry.py
backend/tests/: conftest.py  test_smoke.py
docs/: backend_koncept.md  filstruktur.md
frontend/: Dockerfile
